infrastructure/k8s/overlays/dev/service-account-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curs-valutar
spec:
  template:
    spec:
      serviceAccountName: curs-valutar
