infrastructure/k8s/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: curs-flask-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls: []
  rules:
    - host: di-exchange.istartit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: curs-flask
                port:
                  number: 80
